# VR_project

./: .gitignore  CMakeLists.txt
resources/objects/: floor.mtl
resources/objects/rail/: trilho.mtl
resources/objects/ship/: shipA_preview.max
resources/textures/Floor/: Floor_DIFF.tga  Floor_NORM.tga  Floor_SPEC.tga
src/shaders/: asteroid.frag  circuit.frag  circuit.vert  circuitBTN.geom  circuitBTN.vert  circuitLaser.frag  circuitLaser.geom  circuitLaser.vert  container.frag  explode.frag  explode.geom  explode.vert  floor.frag  floor.vert  hdr.frag  ico.frag  ico.geom  ico.tesc  ico.tese  ico.vert  lamp.frag  nanosuit.frag  nanosuit.vert  particle.frag  particle.vert  rocks.frag  rocks.vert  spaceship.frag  test1.frag  test1.vert
src/vr/: Camera.hpp  Circuit.hpp  DepthMap.hpp  Light.hpp  Mesh.hpp  Model.hpp  Particles.hpp  Shader.hpp  main.cpp
